<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_amigos"
            android:icon="@drawable/amigos"
            android:title="@string/menu_amigos" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/apps"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_retos"
            android:icon="@drawable/retos"
            android:title="@string/menu_retos" />
        <item
            android:id="@+id/nav_tienda"
            android:icon="@drawable/tienda"
            android:title="@string/menu_tienda" />
        <item
            android:id="@+id/nav_baul"
            android:icon="@drawable/baul"
            android:title="@string/menu_baul" />
    </group>



</menu>
