<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.forest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_amigos"
        android:name="com.example.forest.ui.friends.FriendsFragment"
        android:label="@string/menu_amigos"
        tools:layout="@layout/fragment_amigos" />

    <fragment
        android:id="@+id/nav_apps"
        android:name="com.example.forest.ui.slideshow.AppsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_apps" />

    <fragment
        android:id="@+id/nav_retos"
        android:name="com.example.forest.ui.retos.RetosFragment"
        android:label="@string/menu_retos"
        tools:layout="@layout/fragment_retos" />

    <fragment
        android:id="@+id/nav_tienda"
        android:name="com.example.forest.ui.tienda.TiendaFragment"
        android:label="@string/menu_tienda"
        tools:layout="@layout/fragment_baul" />

    <fragment
        android:id="@+id/nav_baul"
        android:name="com.example.forest.ui.baul.BaulFragment"
        android:label="@string/menu_baul"
        tools:layout="@layout/fragment_tienda" />
</navigation>